[package]
name = "wallet-backup"
version = "0.1.0"
edition = "2021"
description = "Multi-chain cryptocurrency wallet backup and key management tool"
license = "MIT"
authors = ["DeFi Key Management Project"]

[[bin]]
name = "wallet-backup"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.0", features = ["derive", "color"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Cryptography - BIP39/44
bip39 = "2.0"
bitcoin = "0.32"
litcoin = "0.28.1"
secp256k1 = { version = "0.31", features = ["recovery"] }
k256 = "0.13"

# ed25519 for Solana, Cardano, etc.
ed25519-dalek = "2.0"
curve25519-dalek = "4.0"

# Solana official SDK
solana-sdk = "3.0.0"

# Cosmos SDK support
cosmrs = "0.22.0"

# Stellar XLM support (using available version)
stellar-base = "0.6.0"

# Cardano support
pallas-crypto = "0.30"
pallas-codec = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.9"

# PBKDF2 for key derivation
pbkdf2 = "0.12"
sha2 = "0.10"

# Base58 encoding (Bitcoin addresses)
bs58 = "0.5"

# Bech32 encoding (Bitcoin segwit addresses)  
bech32 = "0.11"

# Blake2b hashing (for some chains)
blake2 = "0.10"

# SHA3/Keccak for Ethereum
sha3 = "0.10"

# HMAC for key derivation
hmac = "0.12"

# RIPEMD-160 for XRP (keeping for other uses)
ripemd = "0.1"

# XRP/XRPL support with xrpl crate (published as xrpl-rust but imported as xrpl)
xrpl-rust = "1.0.0"

# TRON support
anychain-tron = "0.2.13"
anychain-core = "0.1.8"

# Ethereum support - using modern Alloy library (replacement for ethers-rs)
alloy-primitives = "1.3.1"

# Phase 4 blockchain support
hiero-sdk = "0.40.0"        # Hedera Hashgraph SDK
algo_rust_sdk = "1.0.3"     # Algorand SDK

# Polkadot SS58 address encoding (custom implementation) - uses existing blake2 and bs58
ss58-registry = "1.51.0"    # SS58 format registry for Polkadot addresses

# Phase 5 blockchain support
sui-crypto = "0.0.7"        # Sui cryptographic operations (ed25519 signing/verification)
sui-sdk-types = "0.0.7"     # Core Sui types including Address struct
iota-crypto = "0.23.2"      # IOTA ed25519 key operations and SLIP-0010 derivation
tonlib-core = "0.26.1"      # Mature TON core library with focused wallet and address functionality

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
